--- a/src/css/styleMobile.css
+++ b/src/css/styleMobile.css
@@ -272,8 +272,8 @@ color: #6e0f0e;
 
     .navbar {
         width: 45%;
-        padding: 0 14%; 
-        transform: translateX(-50%);
+        padding-top: 0; 
+        transform: translateX(-28%);
     }
 
     .navbar .form-control {
@@ -311,12 +311,12 @@ color: #6e0f0e;
     .footer{
         width: 25%;
     position: fixed;
-    left: 50%;
+    left: 46.5%;
     transform: translateX(-50%);
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: -5px;
+    margin-bottom: 25px;
     }
     .social{
         display: flex;
