--- a/src/css/homepage.css
+++ b/src/css/homepage.css
@@ -1,4 +1,4 @@
-@media (min-width: 601px){
+@media (min-width: 601px), (min-height:601px){
     *{
         margin: 0;
         padding: 0;
@@ -19,7 +19,7 @@
     
     
     .book{
-        cursor: pointer;
+        cursor:url('img/cursore.png'), auto ;
         position: center;
         display: flex;
         width: 350px;
@@ -74,7 +74,7 @@
     }
 
     /*PERGAMENA MOBILE*/
-    @media (max-width: 600px) {
+    @media (max-width: 539px), (max-height:530px) {
     .book{
         display: none;
     }
