--- a/src/css/stylePC.css
+++ b/src/css/stylePC.css
@@ -188,6 +188,7 @@ color:#D7D9D1 ;
   .book:hover {
     box-shadow: 0 30px 60px rgba(0, 0, 0, 0.4); /* Ombra più intensa */
     transition: box-shadow 0.3s ease-in-out;
+    cursor: url('img/cursore.png'), auto;
   }
   .bookbtn {
     height: 30px;
@@ -281,6 +282,7 @@ color:#D7D9D1 ;
   }
   .footer img:hover {
     animation: bounce 0.6s ease 3;
+    cursor: url('img/cursore.png'), auto;
   }
   
   @keyframes bounce {
